# dify-plugin-kook-notify

./: PRIVACY.md  README.md  manifest.yaml  pyproject.toml  requirements.txt
.github/prompts/: dify_plugin.prompt.md
.github/workflows/: plugin-publish.yml
provider/: kook.py  kook.yaml
tools/: client.py  kook-notify.py  kook-notify.yaml  model.py
